plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'ru.masnaviev.cloudfile'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

ext {
    flywayVersion = '11.8.2'
    gsonVersion = '2.13.1'
    redisVersion = '3.5.0'
    lombokVersion = '1.18.38'
    redistestContainerVersion = '1.6.4'
    testContainersVersion = '1.21.1'
    springdocVersion = '2.8.9'
    minioVersion = '8.5.17'
}

dependencies {
    // Spring
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.session:spring-session-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    // Db
    runtimeOnly 'org.postgresql:postgresql'
    implementation("io.minio:minio:${minioVersion}")

    // Migrations
    implementation("org.flywaydb:flyway-core:${flywayVersion}")
    runtimeOnly("org.flywaydb:flyway-database-postgresql:${flywayVersion}")

    // Lombok & Gson
    compileOnly("org.projectlombok:lombok:${lombokVersion}")
    annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
    implementation("com.google.code.gson:gson:${gsonVersion}")

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation("org.testcontainers:testcontainers:${testContainersVersion}")
    testImplementation("org.testcontainers:junit-jupiter:${testContainersVersion}")
    testImplementation("org.testcontainers:postgresql:${testContainersVersion}")
    implementation("com.redis.testcontainers:testcontainers-redis:${redistestContainerVersion}")
    testImplementation("org.testcontainers:minio:${testContainersVersion}")


    // Documentation
    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocVersion}")
}

test {
    useJUnitPlatform()
    jvmArgs "-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }}", '-Xshare:off'
}